--- a/about.css
+++ b/about.css
@@ -1,7 +1,7 @@
 /* Gerenal styles */
 .about {
     margin: 200px;
-    background-image: url("fl2.jpg");
+    background-image: url("images/fl2.jpg");
     background-position: right center;
     background-size: cover;
     width: 150;
@@ -27,7 +27,7 @@
     font-weight: bolder;
 }
 body{
-    background-image: url("flower.jpg");
+    background-image: url("images/flower.jpg");
     background-position: right center;
     background-size: cover;
 }
